--- a/public/index.html
+++ b/public/index.html
@@ -13,12 +13,35 @@
       property="og:url"
       content="https://star-x-part.vercel.app/?vercelToolbarCode=N55UHkzuxiRSPG3"
     />
-    <meta property="og:title" content="Star-X-Part" />
-    <meta property="og:description" content="" />
+    <!-- Primary Meta Tags -->
+    <title>Star x-prt Computer Technical institute</title>
+    <meta name="title" content="Star x-prt" />
+    <meta name="description" content="" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://starxprtcomputer.in/" />
+    <meta property="og:title" content="Star x-prt" />
+    <meta
+      property="og:description"
+      content="Star x-prt computer Technical institute"
+    />
     <meta
       property="og:image"
       content="https://metatags.io/images/meta-tags.png"
     />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://starxprtcomputer.in/" />
+    <meta property="twitter:title" content="Star x-prt" />
+    <meta property="twitter:description" content="" />
+    <meta
+      property="twitter:image"
+      content="https://metatags.io/images/meta-tags.png"
+    />
+
+    <!-- Meta Tags Generated with https://metatags.io -->
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
@@ -41,7 +64,6 @@
       src="https://kit.fontawesome.com/23fa4e7924.js"
       crossorigin="anonymous"
     ></script>
-    <title>Star-X-Part</title>
     <link
       rel="icon"
       type="image/x-icon"
