--- a/public/index.html
+++ b/public/index.html
@@ -53,13 +53,16 @@
     <meta property="twitter:description" content="" />
     <meta
       property="twitter:image"
-      content="https://metatags.io/images/meta-tags.png"
+      content="../src/asssets/images/logo.png"
     />
 
     <!-- Meta Tags Generated with https://metatags.io -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+    <link rel="canonical" href="https://www.starxprtcomputer/" />
+
     <script
       src="https://kit.fontawesome.com/23fa4e7924.js"
       crossorigin="anonymous"
