--- a/public/index.html
+++ b/public/index.html
@@ -16,45 +16,32 @@
     <!-- Primary Meta Tags -->
     <title>Star x-prt Computer Technical institute</title>
     <meta name="title" content="Star x-prt" />
-    <meta name="description" content="" />
+    <meta name="description" content="Master demanding Skills in Computer and More with an Exceptional Teacher at Star X-Prt Computer Technical Institute" />
 
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://starxprtcomputer.in/" />
-    <meta property="og:title" content="Star x-prt" />
-    <meta
-      property="og:description"
-      content="Star x-prt computer Technical institute"
-    />
-    <meta
-      property="og:image"
-      content="https://metatags.io/images/meta-tags.png"
-    />
+    
 
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://starxprtcomputer.in/" />
-    <meta property="twitter:title" content="Star x-prt" />
-    <meta property="twitter:description" content="" />
-    <meta
-      property="twitter:image"
-      content="https://metatags.io/images/meta-tags.png"
-    />
+    <!-- Primary Meta Tags -->
+<title>Star x-prt Computer Technical Institute</title>
+<meta name="title" content="Star x-prt Computer Technical Institute, Dhanghata, Sant Kabir Nagar" />
+<meta name="description" content="Master demanding Skills in Computer and More with an Exceptional Teacher at Star X-Prt Computer Technical Institute" />
 
-    <!-- Meta Tags Generated with https://metatags.io -->
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://starxprtcomputer.in" />
+<meta property="og:title" content="Star x-prt Computer Technical Institute, Dhanghata, Sant Kabir Nagar" />
+<meta property="og:description" content="Master demanding Skills in Computer and More with an Exceptional Teacher at Star X-Prt Computer Technical Institute" />
+<meta property="og:image" content="../src/asssets/images/logo.png" />
 
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta
-      property="twitter:url"
-      content="https://star-x-part.vercel.app/?vercelToolbarCode=N55UHkzuxiRSPG3"
-    />
-    <meta property="twitter:title" content="Star-X-Part" />
-    <meta property="twitter:description" content="" />
-    <meta
-      property="twitter:image"
-      content="../src/asssets/images/logo.png"
-    />
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image" />
+<meta property="twitter:url" content="https://starxprtcomputer.in" />
+<meta property="twitter:title" content="Star x-prt Computer Technical Institute, Dhanghata, Sant Kabir Nagar" />
+<meta property="twitter:description" content="Master demanding Skills in Computer and More with an Exceptional Teacher at Star X-Prt Computer Technical Institute" />
+<meta property="twitter:image" content="../src/asssets/images/logo.png" />
+
+<!-- Meta Tags Generated with https://metatags.io -->
+
+    
 
     <!-- Meta Tags Generated with https://metatags.io -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -85,6 +72,29 @@
     />
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+
+    <link rel="stylesheet" href="../src/App.css">
+
+    <script>
+      document.addEventListener('contextmenu', function (e) {
+        e.preventDefault();
+      });
+
+      document.onkeydown = function (e) {
+        if (e.ctrlKey && (e.keyCode === 67 || e.keyCode === 85 || e.keyCode === 123)) {
+          return false;
+        }
+        if (e.shiftKey && e.keyCode === 121) {
+          return false;
+        }
+        if (e.ctrlKey && e.shiftKey && e.keyCode === 73) {
+          return false;
+        }
+        if (e.ctrlKey && e.shiftKey && e.keyCode === 74) {
+          return false;
+        }
+      };
+    </script>
   </head>
 
   <body class="bg-base-200">
