--- a/public/index.html
+++ b/public/index.html
@@ -76,24 +76,24 @@
     <link rel="stylesheet" href="../src/App.css">
 
      <script>
-      document.addEventListener('contextmenu', function (e) {
-        e.preventDefault();
-      });
+      // document.addEventListener('contextmenu', function (e) {
+      //   e.preventDefault();
+      // });
 
-      document.onkeydown = function (e) {
-        if (e.ctrlKey && (e.keyCode === 67 || e.keyCode === 85 || e.keyCode === 123)) {
-          return false;
-        }
-        if (e.shiftKey && e.keyCode === 121) {
-          return false;
-        }
-        if (e.ctrlKey && e.shiftKey && e.keyCode === 73) {
-          return false;
-        }
-        if (e.ctrlKey && e.shiftKey && e.keyCode === 74) {
-          return false;
-        }
-      };
+      // document.onkeydown = function (e) {
+      //   if (e.ctrlKey && (e.keyCode === 67 || e.keyCode === 85 || e.keyCode === 123)) {
+      //     return false;
+      //   }
+      //   if (e.shiftKey && e.keyCode === 121) {
+      //     return false;
+      //   }
+      //   if (e.ctrlKey && e.shiftKey && e.keyCode === 73) {
+      //     return false;
+      //   }
+      //   if (e.ctrlKey && e.shiftKey && e.keyCode === 74) {
+      //     return false;
+      //   }
+      // };
     </script>
   </head>
 
